@@ -1364,15 +1364,14 @@ detect whether a judgedaemon is running on the host.
 <tag>language</tag>
 Programming languages in which to accept and judge submissions.
 <tt>langid</tt> is a string of maximum length 8, which references the
-language. This reference is also used to call the correct compile
+language; it is used internally as extension for source files and must
+match the first extension listed for the language in
+the <tt>LANG_EXTS</tt> setting in the configuration files.
+This reference is also used to call the correct compile
 script (<tt>lib/judge/compile_c.sh</tt>, etc.), so when adding
 a new language, check that these match.
 
 <tt>name</tt> is the displayed name of the language;
-<tt>extension</tt> the internally used filename extension for that language,
-which has to match the first extension as listed in the global
-configuration file.
-
 <tt>allow_submit</tt> determines whether teams can submit
 using this language; <tt>allow_judge</tt> determines whether
 judgehosts will judge submissions for this problem. This can for
